2010-01-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: Released GraphicsMagick 1.3.8.
	
	* NEWS.txt: Update for the 1.3.8 release.

2010-01-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/benchmarks.rst: Update benchmark report to compare
	performance with ImageMagick 6.5.8-10.

2010-01-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/shear.c (RotateImage, ShearImage): Ensure that errors
	propagate up to the API user.  Don't overwrite a detailed
	exception message with a generic one.  Don't return a bogus image
	if there is an error.

2010-01-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/installer/inc/files-base.isx: Third party
	executables not included in the Visual Studio build are no longer
	bundled in the GraphicsMagick installer.  This means that
	hp2xx.exe, mpeg2dec.exe, and mpeg2enc.exe are no longer
	distributed.

	* www/Magick++/Image.rst: Emphasize that InitializeMagick() MUST
	be invoked, and make sure that all of the examples show use of it.

2010-01-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/delegate.c (InvokeDelegate): Use MagickSpawnVP() under
	Windows as well.
	(InvokePostscriptDelegate): Use MagickSpawnVP() under Windows as
	well.

	* magick/utility.c (MagickSpawnVP): Moved from unix_port.c.
	Updated implementation to use spawnvp() rather than fork()/exec()
	under Windows.

	* configure.ac: Add check for Windows spawnvp function.
	Add check for process.h.

	* magick/semaphore.c (DestroySemaphore): POSIX mutex statically
	initialized via PTHREAD_MUTEX_INITIALIZER should not be destroyed.

	* configure.ac: DisableSlowOpenMP is now the default.  Use
	--enable-openmp-slow to enable OpenMP for algorithms which
	sometimes run slower rather than faster.

2010-01-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/version.h.in: Added MagickLibInterfaceNewest and
	MagickLibInterfaceOldest preprocessor defines so that applications