@@ -213,7 +213,7 @@ void SetMagickResourceLimit( const <a class="reference external" href="../api/ty
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2010-01-20 23:38 UTC.
+Generated on: 2010-01-26 03:33 UTC.
 
 </div>
 </body>
