@@ -1,3 +1,14 @@
+2010-01-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/resource.c (SetMagickResourceLimit): Invoke
+	omp_set_num_threads() to set thread limit if ThreadsResource is
+	requested.
+
+	* magick/pixel_cache.c (AllocateThreadViewSet): The number of
+	cache views to allocate needs to be obtained from
+	omp_get_max_threads().  Otherwise there is a crash if the number
+	of threads is reduced from the original value.
+
 2010-01-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* version.sh: Released GraphicsMagick 1.3.8.
